# seija-old

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
examples/first/: Cargo.toml
examples/first/res/: 1.json
examples/first/res/111/: flat.json  material.json  paper.json  res1.json
examples/first/src/: core.rs  input.rs  layout.rs  main.rs  tests.rs
src/: app.rs  lib.rs  test.rs
src/assets/: center.rs  env.rs  errors.rs  impls.rs  loader.rs  mod.rs  pack.rs  storage.rs
src/common/: mod.rs  rect.rs  update.rs
src/common/transform/: component.rs  mod.rs  transform.rs
src/common/tree/: mod.rs  tree.rs
src/core/: game.rs  mod.rs  module_bundle.rs  timing.rs  update_limiter.rs
src/event/: cb_event.rs  global.rs  mod.rs
src/render/: batch.rs  camera.rs  font.rs  gather.rs  graph_node.rs  macros.rs  mod.rs  pipeline.rs  pod.rs  render.rs  render_plan.rs  sprite_mesh.rs  sprite_visibility.rs  transparent.rs  types.rs
src/render/components/: image.rs  mesh2d.rs  mod.rs  sprite.rs  sprite_sheet.rs  text.rs
src/render/env/: camera_env.rs  font_env.rs  mod.rs  texture_env.rs
src/render/groups/: flat2d.rs  mod.rs
src/render/shaders/: sprite.frag  sprite.vert
src/render/utils/: mod.rs  uniform.rs  vertex.rs
src/s2d/: mod.rs  simple2d.rs
src/s2d/layout/: base_layout.rs  grid.rs  mod.rs  screen_scaler.rs  stack.rs  stack_panel.rs  system.rs  types.rs  view.rs
src/s2d/layout2/: grid.rs  handle.rs  layout.rs  mod.rs  stack.rs  system.rs  types.rs  view.rs
src/s2d/ui/: mod.rs  raw_input.rs  ui_system.rs
src/window/: mod.rs  window.rs
(+2 files in other folders)
