[package]
name = "seija"
version = "0.1.0"
authors = ["yangdao <458424869@qq.com>"]
edition = "2018"

[dependencies]
winit = "0.23.0"
shrev = "1.1.1"
shred = "0.10.2"
specs = "0.16.1"
glsl-layout = "0.3.2"
lazy_static = "1.4"
smallvec = "1.5.1"
failure = "0.1.8"
palette = "0.5"
nalgebra = "0.23.1"
hibitset = "0.6.2"
crossbeam-queue = "0.3.1"
crossbeam = "0.8.0"
rayon = "1.5.0"
fnv = "1"
serde_json = "1.0.44"
#glsl-to-spirv = "0.1.7"
byteorder = "1.3.2"
thread_profiler = { version = "0.3", optional = true }
glyph_brush = "0.6.3"
font-kit = "0.10.0"
chrono = "0.4.11"


[dependencies.rendy]
version = "0.5.1"
default-features = false
features = ["base","vulkan","texture-image","empty"]
[features]
profiler = [ "thread_profiler/thread_profiler" ]

